--- a/Final_Project/finalProject.html
+++ b/Final_Project/finalProject.html
@@ -108,7 +108,7 @@
  <hr>
  <body>
   <h3>
-  Final Project: 
+  Final Project: <a href = "finalProject/Final_project_progress_report.pdf">Progress report</a>
   </h3>
 <b>I achieved :</b><br>
 1. Modeling: create and store a 3D object by draw three 2D "elevations" (front, top, side of "my dream house"). And create a 3D model (isometric) of the object from them.<br>
